--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   },
   "homepage": "https://github.com/Recipe-devs/Server#readme",
   "dependencies": {
+    "aws-sdk": "^2.1300.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "path": "^0.12.7",
+    "uuid": "^9.0.0"
   }
 }
