--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "uuid": "^9.0.0"
   }
 }
