--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "coverage": "vitest --coverage",
     "start": "vite preview"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "^0.28.3",
     "jsdom": "^21.1.0",
     "vite": "^4.0.0",
     "vitest": "^0.28.3"
