--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
     "start": "vite preview"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.28.3",
+    "@vitest/ui": "^0.28.3",
     "jsdom": "^21.1.0",
     "vite": "^4.0.0",
     "vitest": "^0.28.3"
