--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --detectOpenHandles ",
+    "test-cc": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
