--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "localbuild": "vite build --mode=production",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
-    "start": "vite preview"
+    "start": "vite preview --host"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,17 +19,10 @@
     "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "@vitest/coverage-c8": "^0.28.3",
-    "@vitest/ui": "^0.28.3",
     "jsdom": "^21.1.0",
-    "vite": "^4.0.0",
-    "vitest": "^0.28.3"
+    "vite": "^4.0.0"
   }
 }
